[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "airplast-client"
version = "0.1.0"
description = "Async Python client for Airplast AirApp backend APIs"
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "Airplast API client maintainers" }]
license = { text = "Proprietary" }
dependencies = [
    "aiohttp>=3.9",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.23",
    "pytest-homeassistant-custom-component",
    "aioresponses>=0.7",
]
ha = [
    "homeassistant>=2024.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "live: uses real Airplast cloud endpoints and requires credentials",
]

[tool.setuptools.packages.find]
include = ["custom_components*"]
